5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1637_2703.log
== TEST (2019-04-09 10:18:47) 
-- CODE:
x = int(input("digite a idade do eleitor: "))
if (x>=18):
	mensagem = "eleitor" 
else:
	mensagem "nao eleitor"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    mensagem "nao eleitor"
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:18:53) 
-- CODE:
x = int(input("digite a idade do eleitor: "))
if (x>=18):
	mensagem = "eleitor" 
else:
	mensagem = "nao eleitor"
print(mensagem)
-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:18:58) 
-- CODE:
x = int(input("digite a idade do eleitor: "))
if (x>=18):
	mensagem = "eleitor" 
else:
	mensagem = "nao eleitor"
print(mensagem)
-- EXECUTION TIME:
0.113416
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:19:02) 
-- CODE:
x = int(input("digite a idade do eleitor: "))
if (x>=18):
	mensagem = "eleitor" 
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:19:07) 
-- CODE:
x = int(input("digite a idade do eleitor: "))
if (x>=18):
	mensagem = "eleitor" 
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- EXECUTION TIME:
0.15255
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
